--- a/port-fol/package.json
+++ b/port-fol/package.json
@@ -1,7 +1,7 @@
 {
   "name": "port-fol",
   "version": "0.1.0",
-  "homepage": "https://juledeky.github.io/",
+  "homepage": "https://juledeky.github.io/port-fol",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
